OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/Dispense_as_Written__c.field-meta.xml
<CustomField>
    <fullName>Dispense_as_Written__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispense as Written</label>
    <type>Checkbox</type>
</CustomField>