OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>300 mg</fullName>
            </value>
            <value>
                <fullName>400 mg</fullName>
            </value>
            <value>
                <fullName>30 &amp; 15 mg</fullName>
            </value>
            <value>
                <fullName>45 &amp; 15 mg</fullName>
            </value>
            <value>
                <fullName>60 &amp; 30 mg</fullName>
            </value>
            <value>
                <fullName>90 &amp; 30 mg</fullName>
            </value>
            <value>
                <fullName>15 mg</fullName>
            </value>
            <value>
                <fullName>0.25 mg</fullName>
            </value>
            <value>
                <fullName>0.5 mg</fullName>
            </value>
            <value>
                <fullName>1 mg</fullName>
            </value>
            <value>
                <fullName>2 mg</fullName>
            </value>
            <value>
                <fullName>3 mg</fullName>
            </value>
            <value>
                <fullName>4 mg</fullName>
            </value>
            <value>
                <fullName>30 mg</fullName>
            </value>
            <value>
                <fullName>720 mg</fullName>
            </value>
            <value>
                <fullName>960 mg</fullName>
            </value>
            <value>
                <fullName>PO QDx7/PO Q12H</fullName>
            </value>
            <value>
                <fullName>PO Q12H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>