OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/ICD_10_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_Code__c</fullName>
    <description>Formula field from Case record</description>
    <formula>Text(Case__r.ICD_10_Diagnosis_Code__c)</formula>
    <inlineHelpText>Formula field from Case record</inlineHelpText>
    <label>ICD-10 Code</label>
    <type>Text</type>
</CustomField>