OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/Next_Injection__c.field-meta.xml
<CustomField>
    <fullName>Next_Injection__c</fullName>
    <label>Next Injection</label>
    <type>Date</type>
</CustomField>