OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Formula field from Case record</description>
    <formula>Text(Case__r.Product__c)</formula>
    <inlineHelpText>Formula field from Case record</inlineHelpText>
    <label>Product</label>
    <type>Text</type>
</CustomField>