OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/Qty_SAMSCA_at_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Qty_SAMSCA_at_Discharge__c</fullName>
    <label>Qty SAMSCA at Discharge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>