OpafProjectVfMods/force-app/main/default/objects/Prescription__c/fields/REMS_Program__c.field-meta.xml
<CustomField>
    <fullName>REMS_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REMS Program</label>
    <type>Checkbox</type>
</CustomField>